# Resume-Generator

./: .dockerignore  .env.example  .gitignore  BuildResume.py  Makefile  app.py  build_resume.py  config.py  dockerfile  init.tex  insert.http  load_sections.py  load_user.py  moderncv.py  pyproject.toml  readme.md  requirements.txt  server.py  template.py  template1.py  template2.py  user.json
.github/workflows/: main_resumegenapi.yml
output/: .gitignore
src/: __init__.py  config.py
src/api/: __init__.py  responses.py  routes.py  swagger.py  validation.py
src/database/: operations.py
src/exceptions/: __init__.py
src/models/: __init__.py  resume.py
src/repositories/: __init__.py  base.py  mongodb.py  sqlite.py
src/templates/: __init__.py  base.py  latex_utils.py  moderncv.py  template1.py  template2.py  template3.py
template/: resume.cls
template2/: resume.tex  russell.cls
template2/cv/: summary.tex
tests/: __init__.py  conftest.py
tests/fixtures/: sample_resume.json
tests/property/: __init__.py  test_api.py  test_config.py  test_exceptions.py  test_latex_utils.py  test_repositories.py
tests/unit/: __init__.py  test_models.py
