[project]
name = "resume-generator"
version = "1.0.0"
description = "Resume generator backend with LaTeX templates"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
    "Flask==2.2.3",
    "flask-cors",
    "waitress",
    "pymongo",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
