[project]
name = "resume-generator"
version = "1.0.0"
description = "Resume generator backend with LaTeX templates"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
    "Flask>=3.0.0",
    "flask-cors",
    "waitress",
    "python-dotenv",
]

[project.optional-dependencies]
mongodb = [
    "pymongo>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
