[project]
name = "resume-generator"
version = "1.0.0"
description = "Resume generator backend with LaTeX templates"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0.0",
    "flask-cors>=4.0.0",
    "waitress>=3.0.0",
    "python-dotenv>=1.0.0",
    "flasgger>=0.9.7",
]

[project.optional-dependencies]
mongodb = [
    "pymongo>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
    "black>=24.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
